<resources>
    <string name="nav_header_desc">Navigation header</string>
    <string name="loading">Loading…</string>
    <string name="view_profile">View Profile</string>
    <string name="videos">Videos</string>
    <string name="feeds">Feeds</string>
    <string name="chats">Chats</string>
    <string name="stories">Stories</string>
    <string name="an_unrecognized_error_occurred">An Unrecognized Error Occurred</string>
    <string name="error">Error</string>
    <string name="there_was_an_error">Sorry, there was an error.</string>
    <string name="server_connection_error">Server Connection Error…</string>
    <string name="oops">OOPS…</string>
    <string name="no_posts_yet">No posts yet</string>
    <string name="add_some_friends_to_see_their_posts_here">Add some friends to see their posts here</string>
    <string name="no_contact_yet">No contact yet</string>
    <string name="No_Contact_List_Available">No Contact List Available"</string>
    <string name="long_text">Add some friends to see their posts here
        Add some friends to see their posts here Add some friends to
        see their posts here Add some friends to see their posts hereAdd some
        friends to see their posts here Add some friends to see their posts hereAdd
        some friends to see their posts hereAdd some friends to see their posts
        here Add some friends to see their posts here Add some friends to see
        their posts here Add some friends to see their posts here Add some friends to see their posts here
        Add some friends to see their posts here Add some friends to see their
        posts here Add some friends to see their posts here v</string>
    <string name="image_container">Image Container</string>
    <string name="like">Like</string>
    <string name="delete">Delete</string>
    <string name="dislike">Dislike</string>
    <string name="add_comment">Add Comment…</string>
    <string name="no_followers_yet">No Followers Yet</string>

    <string name="no_comment_yet">No Comment Yet</string>
    <string name="be_first_create_comment">Be the first to comment…</string>
    <string name="sorry_comment_not_sent">Sorry, comment could not send, try again.</string>

    <string name="views">%1$s Views</string>
    <string name="likes">%1$s Likes</string>
    <string name="comments">%1$s Comments</string>
    <string name="delete_status">Delete Status</string>
    <string name="follow_back">Follow Back</string>
    <string name="follow">Follow</string>
    <string name="unfriend">Unfriend</string>
    <string name="unfollow">Unfollow</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="typing">Typing…</string>
    <string name="slide_to_cancel">"Slide to cancel"</string>
</resources>

