<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <com.github.heyalex.expandable_cardview.ExpandableCardView
            android:id="@+id/expandble_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            app:animation_duration="250"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:expanded="false"
            app:content_view="@layout/bottom_sheet_profile_content"
            app:header_view="@layout/status_views_header"
            tools:expanded="true" />
    </FrameLayout>

    <View style="@style/Divider.Horizontal" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottom_sheetrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/default_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/empty_box_120px" />

        <TextView
            android:id="@+id/default_title"
            fontPath="fonts/GoogleSans_Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_comment_yet"
            android:textColor="#313131"
            android:textSize="19sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/be_first_create_comment" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/oops"
            app:srcCompat="@drawable/icons8_error_96" />

        <TextView
            fontPath="fonts/GoogleSans_Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/oops"
            android:textColor="#313131"
            android:textSize="19sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/an_unrecognized_error_occurred" />

    </LinearLayout>

</LinearLayout>