<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:ignore="MissingPrefix">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/posts_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="110dp"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
            <LinearLayout
                android:id="@+id/default_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                <TextView
                    android:id="@+id/default_title"
                    fontPath="fonts/GoogleSans_Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_posts_yet"
                    android:textColor="#313131"
                    android:textSize="19sp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/default_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/add_some_friends_to_see_their_posts_here" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/oops"
                    app:srcCompat="@drawable/icons8_error_96" />

                <TextView
                    fontPath="fonts/GoogleSans_Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/oops"
                    android:textColor="#313131"
                    android:textSize="19sp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/an_unrecognized_error_occurred" />

            </LinearLayout>
        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>